update view, urls, user login

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,4 +2,6 @@
      {% csrf_token %}
     {{ form.as_p}}
     <input type="submit"/>
+
 </form>
+<p><a href="{% url 'password_reset' %}"> forgot password </a></p>
